Ensure the Harmony close buttons appear in the correct place.

The Harmony spec states that the centre of the close button on dialogs
should be 16x16 from the top right of the window. Make it so.

This depends on the way lines are drawn in the vector icon. Values
chosen here were determined using the 1x assets and verified on Windows
and Mac.

BUG=674269

Review-Url: https://codereview.chromium.org/2610613002
Cr-Commit-Position: refs/heads/master@{#441581}

Former-commit-id: e6d869558bf4e9b9b16c1284f438c7989dc61997